--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
-javaVersion=17
+javaVersion=21
 #Plugins
 systemProp.kotlinVersion=1.9.24
 #Dependencies
 systemProp.kvisionVersion=7.5.1
+systemProp.ktorVersion=2.3.12
